[package]
name = "vzlom-kazino"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [".", "entity", "migration"]

[profile.release]
strip = true
lto = true

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
#clap = { version = "3", features = [ "derive" ] }
rocket = "0.5.0-rc.2"
sea-orm = { version = "0.9.3", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
urlencoding = "2.1"
itertools = "0.10"
hmac = "0.12"
sha2 = "0.10"

migration = { path = "migration" }
entity = { path = "entity" }
